--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
         <div class="divider"></div>
         <div class="desc-ko">
             안녕하세요, 모션 그래픽 아티스트 정재훈입니다. <br>
-            3D 모션 그래픽을 활용해 감각적인 애니메이션과 비주얼을 제작하며, 제품 및 브랜드 아이덴티티 작업을 진행하고 있습니다. 섬세한 디테일과 감성적인 연출을 중요하게 생각합니다.
+            3D 모션 그래픽을 활용해 감각적인 애니메이션과 비주얼을 제작하며, 미디어아트 및 제품홍보영상 작업을 진행하고 있습니다. 섬세한 디테일과 감성적인 연출을 중요하게 생각합니다.
         </div>
     </section>
 
